Fix spacing in blog body for main page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -463,7 +463,7 @@ section#content article .subscribe {
   font-size: .9em;
 }
 section#content article .body {
-  padding: 18px 0 0 0;
+  padding: 18px 0 40px 0;
 }
 section#content article .body h4 {
   font-weight: bold;
